# store_api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
category/: Cargo.toml  README.md
category/src/: error.rs  lib.rs
category/src/domain/: category.rs  mod.rs  utils.rs
category/src/models/: category.rs
category/src/routes/: category.rs  mod.rs
customer/: Cargo.toml  README.md
customer/src/: error.rs  jwt.rs  lib.rs
customer/src/domain/: customer.rs  mod.rs  utils.rs
customer/src/models/: customer.rs
customer/src/routes/: customer.rs  mod.rs
database/: Cargo.toml
database/src/: lib.rs
logs/: store-api.log.2024-12-18  store-api.log.2024-12-19
orders/: Cargo.toml  README.md
orders/src/: error.rs  lib.rs
orders/src/domain/: mod.rs  order.rs  utils.rs
orders/src/models/: mod.rs  order.rs
orders/src/routes/: mod.rs  order.rs
product/: Cargo.toml  README.md
product/src/: error.rs  lib.rs
product/src/domain/: mod.rs  product.rs  utils.rs
product/src/models/: product.rs
product/src/routes/: mod.rs  product.rs
scripts/: create_logs_folder.sh  delete_git_in_folders.sh  start_db.sh
store/: Cargo.toml
store/src/: main.rs  start_web_server.rs
