[package]
name = "category"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
database = { path = "../database"}
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.122"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.63"
surrealdb = "2.0.1"
actix-web = "4.9.0"
validator = { version = "0.18.1", features = ["derive"] }
tracing = "0.1.41"