[package]
name = "customer"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../database"}
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.63"
serde_json = "1.0.122"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.9.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
surrealdb = "2.0.1"
validator = { version = "0.18.1", features = ["derive"] }
bcrypt = "0.15.1"
jsonwebtoken = "9"