[package]
name = "product"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../database"}
category = { path = "../category"}
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.122"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.9.0"
surrealdb = "2.0.1"
validator = { version = "0.18.1", features = ["derive"] }
thiserror = "1.0.63"