[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../database" }
customer = { path = "../customer" }
category = { path = "../category" }
product = { path = "../product" }
orders = { path = "../orders" }
surrealdb = "2.0.1"
once_cell = "1.18.0"
dotenvy = "0.15.7"
tokio = { version = "1.39.3", features = ["full"] }
actix-web = "4.9.0"